@@ -253,6 +253,8 @@ MODULE_SCOPE int BFMatcher(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *cons
 MODULE_SCOPE int FlannBasedMatcher(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int SimpleBlobDetector(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 
+MODULE_SCOPE int BOWKMeansTrainer(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+
 /*
  * OpenCV calib3d
  */
@@ -413,6 +415,7 @@ typedef enum {
     OPENCV_NDETECT,
     OPENCV_QDETECT,
 #endif
+    OPENCV_BOWTRAINER,
     OPENCV_MAXTYPE
 } Opencv_Type;
 
@@ -532,6 +535,7 @@ MODULE_SCOPE int QRCodeDetector_FUNCTION(void *cd, Tcl_Interp *interp, int objc,
 #ifdef TCL_USE_OPENCV4
 MODULE_SCOPE int READNET_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 #endif
+MODULE_SCOPE int BOWKMeansTrainer_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int PCA_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int TERM_FUNCTION(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE void TrackbarCallback(int value, void *userdata);
