@@ -1,3 +1,7 @@
+2021-09-30 Danilo Chang
+
+	* Implement command: BOWKMeansTrainer
+
 2021-09-29 Danilo Chang
 
 	* Implement command: extractChannel
